--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                      <div class="input-field">
                         <input id="remote-url" type="text" name="remote-url" class="validate">
                         <label for="remote-url">URL</label>
-                        <button class="btn waves-effect waves-light" type="submit" onclick="submitFileLink(document.getElementById('remote-url').value)">Submit<i class="material-icons right">send</i></button>
+                        <button class="btn waves-effect waves-light" type="submit" onclick="submitFileLink(document.getElementById('remote-url').value)">Confirm<i class="material-icons right">send</i></button>
                      </div>
                   </form>
                </div>
@@ -197,8 +197,6 @@
                   Powered by <a href="https://github.com/misode/deepslate">DeepSlate <i class="fa fa-github fa-1x"></i></a>
                </h5>
                <p>Known issues: Cannot render Banner, Bed, Chest, Decorated Pot, Sign, Shulker box</p>
-               <p>Complain about this app <a href="https://discord.gg/GJckUsHsVB">here <i class="fab fa-discord"></i></a> (expect improvements soon)</p>
-               <p>Contribute to the project <a href="https://github.com/endingcredits/litematic-viewer/">here <i class="fa fa-github"></i></a></p>
             </div>
          </div>
 
