--- a/index.html
+++ b/index.html
@@ -170,27 +170,13 @@
 
    <div id="loading-spinner" class="center" hidden
       style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 10;">
-      <div class="preloader-wrapper big active">
-         <div class="spinner-layer spinner-blue-only">
-            <div class="circle-clipper left">
-               <div class="circle"></div>
-            </div>
-            <div class="gap-patch">
-               <div class="circle"></div>
-            </div>
-            <div class="circle-clipper right">
-               <div class="circle"></div>
-            </div>
-         </div>
-      </div>
-      <h5 style="color: white; text-shadow: 1px 1px 2px black;">Loading Schematic...</h5>
+      <img src="resource/ALL.gif" alt="Loading..." style="max-width: 200px; height: auto;">
    </div>
 
    <div id="main-content">
 
       <div class="section no-pad-bot">
          <div class="container">
-            <h3 class="header center">JANKY AF litematic viewer by Ending_Credits</h3>
          </div>
       </div>
 
