--- a/index.html
+++ b/index.html
@@ -162,6 +162,19 @@
 
 <body>
 
+   <nav class="black" style="height: 64px; line-height: 64px;">
+      <div class="nav-wrapper">
+         <a href="#" class="brand-logo left"
+            style="display: flex; align-items: center; height: 100%; padding-left: 10px;">
+            <img src="resource/ALL.gif" alt="AllTheBuilds" style="height: 50px;">
+         </a>
+         <ul id="nav-mobile" class="right">
+            <li><a href="https://discord.gg/C2dHwBb3k3" target="_blank" style="font-size: 1.2rem;"><i
+                     class="fab fa-discord"></i> Join our Discord</a></li>
+         </ul>
+      </div>
+   </nav>
+
    <div id="viewer" width="100%"></div>
 
    <div id="sliders" hidden></div>
@@ -210,14 +223,6 @@
          </div>
       </div>
 
-      <div class="row">
-         <div class="col s12">
-            <h5 class="header light">
-               Powered by <a href="https://github.com/misode/deepslate">DeepSlate <i class="fa fa-github fa-1x"></i></a>
-            </h5>
-            <p>Known issues: Cannot render Banner, Bed, Chest, Decorated Pot, Sign, Shulker box</p>
-         </div>
-      </div>
 
       <!-- Texture atlas -->
       <img id="atlas" src="resource/atlas.png" alt="Texture atlas" crossorigin="anonymous" hidden>
