--- a/index.html
+++ b/index.html
@@ -162,22 +162,9 @@
 
 <body>
 
-   <nav class="black" style="height: 64px; line-height: 64px;">
-      <div class="nav-wrapper">
-         <a href="#" class="brand-logo left"
-            style="display: flex; align-items: center; height: 100%; padding-left: 10px;">
-            <img src="resource/ALL.gif" alt="AllTheBuilds" style="height: 50px;">
-         </a>
-         <ul id="nav-mobile" class="right">
-            <li><a href="https://discord.gg/C2dHwBb3k3" target="_blank" style="font-size: 1.2rem;"><i
-                     class="fab fa-discord"></i> Join our Discord</a></li>
-         </ul>
-      </div>
-   </nav>
-
    <div id="viewer" width="100%"></div>
 
-
+   <div id="sliders" hidden></div>
    <button id="materialListButton" hidden><span class="material-icons">list</span></button>
    <div id="materialList" hidden></div>
 
@@ -303,40 +290,23 @@
          }
 
          function readFileURL(url, useProxy = true) {
-            console.log("Attempting to load URL:", url);
             // TODO: This URL probably shouldn't be hardcoded
             var proxyUrl = 'https://api.allorigins.win/raw?url=' + encodeURIComponent(url);
-            console.log("Using proxy URL:", proxyUrl);
-
             var request = new XMLHttpRequest();
             request.responseType = 'blob';
-            request.timeout = 30000; // 30 seconds timeout
-
             request.onreadystatechange = function () {
                if (request.readyState == XMLHttpRequest.DONE) {
                   if (request.status === 200) {
-                     console.log("Loaded file from remote url successfully");
-                     console.log("Response size:", request.response.size);
+                     console.log("Loaded file from remote url");
+                     console.log(request.response);
                      loadAndProcessFile(request.response);
                   }
                   else {
-                     console.error("Error loading litematic. Status:", request.status, "Status Text:", request.statusText);
-                     console.log("Response:", request.response);
-                     alert("Failed to load schematic. Please check the URL and try again.");
+                     console.log("Error loading litematic");
+                     console.log(request);
                   }
                }
             };
-
-            request.ontimeout = function () {
-               console.error("Request timed out");
-               alert("Connection timed out while trying to load the schematic.");
-            };
-
-            request.onerror = function () {
-               console.error("Network error occurred");
-               alert("A network error occurred while trying to load the schematic.");
-            };
-
             request.open('GET', proxyUrl, true);
             request.send();
          }
@@ -376,8 +346,292 @@
 
    </div>
 
+   <!-- open settings panel button -->
+   <a href="javascript:void(0)" id="settings-button" class="openbtn" onclick="openSettings()"><i
+         class="fa fa-cog"></i></a>
 
+   <div id="settings-panel" class="side-nav">
+      <!-- close button -->
+      <a href="javascript:void(0)" class="closebtn" onclick="closeSettings()">&times;</a>
+
+      <!-- add a button to remove the url query params -->
+      <button class="btn waves-effect waves-light red" type="submit"
+         onclick="window.location.href = window.location.href.split('?')[0]">Unload Schematic</button>
+
+      <!-- TODO: Add a way to generate all this automagically -->
+      <p>Controls</p>
+      <div class="settings-section">
+         <div class="col settings-label">
+            Click-drag to:
+         </div>
+         <div class="col">
+
+            <div>
+               <label>
+                  <input name="click-drag" type="radio" class="with-gap setting" data-setting="click-drag" value="move"
+                     checked />
+                  <span class="reduced-padding">Move</span>
+               </label>
+               <label>
+                  <input name="click-drag" type="radio" class="with-gap setting" data-setting="click-drag"
+                     value="pan" />
+                  <span class="reduced-padding">Pan</span>
+               </label>
+            </div>
+
+         </div>
+         <div class="col">
+            <div>
+
+               <span class="switch">
+                  <label>
+                     <input type="checkbox" class="setting" data-setting="click-drag-invert" />
+                     <span class="lever"></span>
+                     Invert
+                  </label>
+               </span>
+            </div>
+         </div>
+
+         <div class="col">
+            <span class="slider">
+               <label class="setting-label">
+                  Sensitivity
+                  <p class="range-field">
+                     <input type="range" min="0" max="5" step="0.1" value="1" class="setting"
+                        data-setting="click-drag-sensitivity" />
+                  </p>
+               </label>
+            </span>
+         </div>
+
+
+         <div class="col settings-label">
+            Middle-click-drag to:
+         </div>
+         <div class="col">
+            <div>
+               <label>
+                  <input name="middle-click-drag" type="radio" class="with-gap setting" data-setting="middle-click-drag"
+                     value="move" />
+                  <span class="reduced-padding">Move</span>
+               </label>
+               <label>
+                  <input name="middle-click-drag" type="radio" class="with-gap setting" data-setting="middle-click-drag"
+                     value="pan" checked />
+                  <span class="reduced-padding">Pan</span>
+               </label>
+            </div>
+
+         </div>
+         <div class="col">
+            <div>
+
+               <span class="switch">
+                  <label>
+                     <input type="checkbox" class="setting" data-setting="middle-click-drag-invert" />
+                     <span class="lever"></span>
+                     Invert
+                  </label>
+               </span>
+            </div>
+
+         </div>
+
+         <div class="col">
+            <span class="slider">
+               <label class="setting-label">
+                  Sensitivity
+                  <p class="range-field">
+                     <input type="range" min="0" max="5" step="0.1" value="1" class="setting"
+                        data-setting="middle-click-drag-sensitivity" />
+                  </p>
+               </label>
+            </span>
+         </div>
+
+         <div class="col" style="grid-column: span 4; text-align: center;">
+            These do not work yet:
+         </div>
+
+         <div class="col settings-label">
+            Scroll to:
+         </div>
+         <div class="col">
+            <div>
+               <label>
+                  <input name="scroll" type="radio" class="with-gap setting" data-setting="scroll" value="move"
+                     checked />
+                  <span class="reduced-padding">Move</span>
+               </label>
+               <label>
+                  <input name="scroll" type="radio" class="with-gap setting" data-setting="scroll" value="zoom" />
+                  <span class="reduced-padding">Zoom</span>
+               </label>
+            </div>
+
+         </div>
+         <div class="col">
+            <div>
+
+               <span class="switch">
+                  <label>
+                     <input type="checkbox" id="invert-move" class="setting" data-setting="scroll-invert-move" />
+                     <span class="lever"></span>
+                     Invert
+                  </label>
+               </span>
+
+            </div>
+         </div>
+
+         <div class="col">
+            <span class="slider">
+               <label class="setting-label">
+                  Sensitivity
+                  <p class="range-field">
+                     <input type="range" min="0" max="5" step="0.1" value="1" class="setting"
+                        data-setting="scroll-sensitivity" />
+                  </p>
+               </label>
+            </span>
+         </div>
+
+         <div class="col settings-label">
+            One finger touch drag to:
+         </div>
+         <div class="col">
+            <div>
+               <label>
+                  <input name="touch-drag" type="radio" class="with-gap setting" data-setting="touch-drag"
+                     value="move" />
+                  <span class="reduced-padding">Move</span>
+               </label>
+               <label>
+                  <input name="touch-drag" type="radio" class="with-gap setting" data-setting="touch-drag" value="pan"
+                     checked />
+                  <span class="reduced-padding">Pan</span>
+               </label>
+            </div>
+
+         </div>
+         <div class="col">
+
+            <div>
+               <span class="switch">
+                  <label>
+                     <input type="checkbox" class="setting" data-setting="touch-drag-move-invert" />
+                     <span class="lever"></span>
+                     Invert
+                  </label>
+               </span>
+            </div>
+
+         </div>
+
+         <div class="col">
+            <span class="slider">
+               <label class="setting-label">
+                  Sensitivity
+                  <p class="range-field">
+                     <input type="range" min="0" max="5" step="0.1" value="1" class="setting"
+                        data-setting="touch-drag-sensitivity" />
+                  </p>
+               </label>
+            </span>
+         </div>
+
+         <div class="col settings-label">
+            Two finger touch drag to:
+         </div>
+         <div class="col">
+            <div>
+               <label>
+                  <input name="two-finger-drag" type="radio" class="with-gap setting" data-setting="two-finger-drag"
+                     value="move" checked />
+                  <span class="reduced-padding">Move</span>
+               </label>
+               <label>
+                  <input name="two-finger-drag" type="radio" class="with-gap setting" data-setting="two-finger-drag"
+                     value="pan" />
+                  <span class="reduced-padding">Pan</span>
+               </label>
+            </div>
+
+         </div>
+         <div class="col">
+
+            <div>
+               <span class="switch">
+                  <label>
+                     <input type="checkbox" class="setting" data-setting="gesture-move-invert" />
+                     <span class="lever"></span>
+                     Invert
+                  </label>
+               </span>
+            </div>
+
+         </div>
+
+         <div class="col">
+            <span class="slider">
+               <label class="setting-label">
+                  Sensitivity
+                  <p class="range-field">
+                     <input type="range" min="0" max="5" step="0.1" value="1" class="setting"
+                        data-setting="gesture-sensitivity" />
+                  </p>
+               </label>
+            </span>
+         </div>
+
+         <div class="col settings-label">
+            Move with:
+         </div>
+         <div class="col">
+            <div>
+               <label>
+                  <input name="wasd-move" type="checkbox" class="filled-in setting" data-setting="wasd-move"
+                     value="checked" checked />
+                  <span class="reduced-padding">WASD</span>
+               </label>
+            </div>
+            <div>
+               <label>
+                  <input name="arrow-move" type="checkbox" class="filled-in setting" data-setting="arrow-move" />
+                  <span class="reduced-padding">Arrow Keys</span>
+               </label>
+            </div>
+            <div>
+               <label>
+                  <input name="pinch-move" type="checkbox" class="filled-in setting" data-setting="pinch-move"
+                     checked />
+                  <span class="reduced-padding">Pinch</span>
+               </label>
+            </div>
+
+         </div>
+         <div class="col" style="grid-column: span 2;">
+            <div>
+
+               <span class="switch">
+                  <label>
+                     <input type="checkbox" class="setting" data-setting="relative-forwards-movement" />
+                     <span class="lever"></span>
+                     Make forwards movement relative to facing direciton
+                  </label>
+               </span>
+
+            </div>
+
+         </div>
+      </div>
+
+      <button class="btn waves-effect waves-light" onclick="resetSettings()">Reset Settings</button>
+   </div>
 
    <!--JavaScript at end of body for optimized loading-->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
+
+</html>
